Fixed white bar at the bottom of the page on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,6 @@
 }
 
 body{
-    min-width: 500px;
-    min-height: 500px;
     overflow-x: hidden;
 }
 
